# differential-privacy

./: .bazelrc  .gitignore  BUILD  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  SECURITY.md  WORKSPACE  bazel-differential-privacy  confidence-intervals.md  differential_privacy.md  differential_privacy_deps.bzl
accounting/python/: BUILD.bazel  README.md  WORKSPACE  accounting_py_deps_init.bzl  privacy_loss_distribution.py  privacy_loss_distribution_basic_example.py  privacy_loss_distribution_test.py  requirements.txt
cc/: .bazelrc  BUILD  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE.bazel  cc_accounting_deps.bzl  cc_differential_privacy_deps.bzl
cc/accounting/: BUILD  README.md  accountant.cc  accountant.h  accountant_test.cc  convolution.cc  convolution.h  convolution_test.cc  example.cc  kiss_fft_wrapper.h  kiss_fft_wrapper_test.cc  privacy_loss_distribution.cc  privacy_loss_distribution.h  privacy_loss_distribution_test.cc  privacy_loss_mechanism.cc  privacy_loss_mechanism.h  privacy_loss_mechanism_test.cc
cc/algorithms/: BUILD  algorithm-stochastic-dp_test.cc  algorithm.h  algorithm_test.cc  approx-bounds-as-bounds-provider.h  approx-bounds-as-bounds-provider_test.cc  approx-bounds-provider.h  approx-bounds-provider_test.cc  approx-bounds.h  approx-bounds_test.cc  binary-search.h  binary-search_test.cc  bounded-algorithm.h  bounded-algorithm_test.cc  bounded-mean-ci-statistical_test.cc  bounded-mean.h  bounded-mean_test.cc  bounded-standard-deviation.h  bounded-standard-deviation_test.cc  bounded-sum.h  bounded-sum_test.cc  bounded-variance.h  bounded-variance_test.cc  bounds-provider.h  count.h  count_test.cc  distributions.cc  distributions.h  distributions_benchmark_test.cc  distributions_test.cc  gaussian-dp-calculator.cc  gaussian-dp-calculator.h  gaussian-dp-calculator_test.cc  numerical-mechanisms-testing.h  numerical-mechanisms-testing_test.cc  numerical-mechanisms.cc  numerical-mechanisms.h  numerical-mechanisms_test.cc  order-statistics.h  order-statistics_test.cc  (+15 more)
cc/base/: BUILD  canonical_errors.cc  canonical_errors.h  logging.cc  logging.h  percentile.h  percentile_test.cc  status.cc  status.h  status_macros.h  status_macros_test.cc  status_test.cc  statusor.cc  statusor.h  statusor_internals.h  statusor_test.cc
cc/docs/: index.md  protos.md
cc/postgres/: BUILD  README.md  anon_func--1.0.0.sql  anon_func.cc  dp_func.cc  dp_func.h  dp_func_test.cc  fruiteaten.csv  install_extension.sh  postgres.BUILD
cc/proto/: BUILD  util.h  util_test.cc
cc/testing/: BUILD  README.md  density_estimation.h  density_estimation_test.cc  quantile_tree_dp_test.cc  sequence.h  sequence_test.cc  statistical_tests_utils.cc  statistical_tests_utils.h  statistical_tests_utils_test.cc  stochastic_tester.h  stochastic_tester_test.cc
examples/cc/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  animals_and_carrots.cc  animals_and_carrots.h  animals_and_carrots_test.cc  report_the_carrots.cc
examples/go/: BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  io_utils.go  main.go  scenarios.go  visit.go
examples/java/: BUILD  ContributionBoundingUtils.java  CountVisitsPerDay.java  CountVisitsPerHour.java  IOUtils.java  InputFilePath.java  MODULE.bazel  Main.java  README.md  RestaurantSchedule.java  SumRevenuePerDay.java  SumRevenuePerDayWithPreAggregation.java  Visit.java  VisitsForWeek.java  WORKSPACE.bazel  day_data.csv  week_data.csv
examples/pipelinedp4j/: .bazelrc  BUILD.bazel  BeamExample.java  MovieMetrics.java  MovieView.java  README.md  SparkExample.java  WORKSPACE.bazel  bazel-pipelinedp4j  pom.xml
examples/zetasql/: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  codelab.md  execute_query.cc
go/: BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  go_differential_privacy_deps.bzl
go/checks/: BUILD.bazel  checks.go  checks_test.go
go/dpagg/: BUILD.bazel  aggregation_state.go  coders.go  count.go  count_confidence_interval_test.go  count_test.go  dpagg_test.go  gobdecode_checks.go  gobdecode_validation_test.go  helpers.go  helpers_test.go  mean.go  mean_confidence_interval_test.go  mean_test.go  quantiles.go  quantiles_test.go  select_partition.go  select_partition_test.go  standard_deviation.go  standard_deviation_test.go  state.go  sum.go  sum_confidence_interval_test.go  sum_test.go  variance.go  variance_test.go
go/noise/: BUILD.bazel  gaussian_noise.go  gaussian_noise_test.go  laplace_noise.go  laplace_noise_test.go  noise.go  noise_test.go  secure_noise_math.go  secure_noise_math_test.go
go/rand/: BUILD.bazel  rand.go  rand_test.go
go/stattestutils/: BUILD.bazel  stattestutils.go  stattestutils_test.go
java/: .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  dp_java_deps.bzl  dp_java_deps_preload.bzl  maven_install.json  pom.template
learning/: BUILD.bazel  MODULE.bazel  WORKSPACE  learning_py_deps.bzl  learning_py_deps_init.bzl  requirements.txt  requirements_lock.txt  setup.py
learning/clustering/: BUILD.bazel  README.md  central_privacy_utils.py  central_privacy_utils_test.py  clustering_algorithm.py  clustering_algorithm_test.py  clustering_params.py  clustering_params_test.py  coreset_params.py  coreset_params_test.py  default_clustering_params.py  default_clustering_params_test.py  lsh.py  lsh_test.py  lsh_tree.py  lsh_tree_test.py  privacy_calculator.py  privacy_calculator_test.py  private_outputs.py  private_outputs_test.py  test_utils.py
pipelinedp4j/: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel  bazel-pipelinedp4j  pom.template
pipelinedp4j/.ijwb/: .bazelproject
privacy-on-beam/: BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  privacy_on_beam_deps.bzl
privacy-on-beam/codelab/: BUILD.bazel  README.md  count.go  day_data.csv  main.go  mean.go  multiple.go  public_partitions.go  sum.go  utils.go  visit.go
privacy-on-beam/pbeam/: BUILD.bazel  aggregations.go  aggregations_test.go  coders.go  count.go  count_test.go  distinct_id.go  distinct_id_test.go  distinct_per_key.go  distinct_per_key_test.go  example_pbeamtest_test.go  example_test.go  (+20 more)
(+697 files in other folders)
