#
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

module(
    name = "differential_privacy_cc",
    repo_name = "com_google_cc_differential_privacy",
)

###
# Internal dependencies

bazel_dep(name = "differential_privacy_common", repo_name = "com_google_differential_privacy")
local_path_override(
    module_name = "differential_privacy_common",
    path = "..",
)

###
# Module dependencies

bazel_dep(name = "abseil-cpp", version = "20250814.1", repo_name = "com_google_absl")
bazel_dep(name = "boringssl", version = "0.20250701.0")
bazel_dep(name = "boost.math", version = "1.87.0")
bazel_dep(name = "protobuf", version = "33.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "google_benchmark", version = "1.9.4", repo_name = "com_google_benchmark")
bazel_dep(name = "googletest", version = "1.17.0", repo_name = "com_google_googletest")
bazel_dep(name = "rules_cc", version = "0.2.14")

###
# HTTP dependencies
#
# These dependencies are not available in the bazel central repository.

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "kissfft",
    build_file_content = """filegroup(name = "all", srcs = glob(["**"]), visibility = ["//visibility:public"])""",
    sha256 = "485d9c3049020685c53e444b32ea4807e77d1d79c76a3736854fcd6f0cfba4b3",
    strip_prefix = "kissfft-9feadb98a9b03604479e94fe9b57afad9c9641d7",
    urls = ["https://github.com/mborgerding/kissfft/archive/9feadb98a9b03604479e94fe9b57afad9c9641d7.tar.gz"],
)

http_archive(
    name = "postgres",
    build_file = "//postgres:postgres.BUILD",
    sha256 = "64f6da47aab9ac65d07b31abd40445b4a0413d4265d25b82ed738abad8a98349",
    strip_prefix = "postgres-REL_12_9",
    url = "https://github.com/postgres/postgres/archive/REL_12_9.tar.gz",
)
