#
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

workspace(name = "com_google_java_differential_privacy")

local_repository(
    name = "com_google_differential_privacy",
    path = "..",
)

# Load dependencies for the base workspace.
load("@com_google_differential_privacy//:differential_privacy_deps.bzl", "differential_privacy_deps")
differential_privacy_deps()

# Protobuf transitive dependencies.
load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")
protobuf_deps()

# Load maven rules.
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "rules_jvm_external",
    strip_prefix = "rules_jvm_external-3.2",
    sha256 = "82262ff4223c5fda6fb7ff8bd63db8131b51b413d26eb49e3131037e79e324af",
    url = "https://github.com/bazelbuild/rules_jvm_external/archive/3.2.zip",
)

# Install required maven artifacts.
load("@rules_jvm_external//:defs.bzl", "maven_install")
maven_install(
    artifacts = [
        # artifacts for building and testing
        "org.apache.commons:commons-math3:3.6.1",
        "com.google.auto.value:auto-value-annotations:1.7",
        "com.google.auto.value:auto-value:1.7",
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.errorprone:error_prone_annotations:2.3.4",
        "com.google.guava:guava:28.2-jre",
        "com.google.protobuf:protobuf-java:3.11.4",
        # artifacts for testing only
        "org.mockito:mockito-core:3.3.0",
        "junit:junit:4.13",
        "com.google.truth:truth:1.0.1",
    ],
    repositories = [
        "https://jcenter.bintray.com/",
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)

