#
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/google/differential-privacy/privacy-on-beam/v3
gazelle(name = "gazelle")

# gazelle:proto disable_global
#
gazelle(
    name = "update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=privacy_on_beam_deps.bzl%privacy_on_beam_deps",
        "-prune",
    ],
    command = "update-repos",
)
