#
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

bazel_dep(name = "differential_privacy_common", repo_name = "com_google_differential_privacy")
local_path_override(
    module_name = "differential_privacy_common",
    path = "../..",
)

bazel_dep(name = "differential_privacy_cc", repo_name = "com_google_cc_differential_privacy")
local_path_override(
    module_name = "differential_privacy_cc",
    path = "../../cc",
)

bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "abseil-cpp", version = "20250814.1", repo_name = "com_google_absl")
bazel_dep(name = "googletest", version = "1.17.0", repo_name = "com_google_googletest")
